objects/CCMI__Time_Options__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>CCMI__Hide_Create_Time_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should the &quot;Create Time Entry&quot; button be included on the timecard</description>
        <label>Hide Create Time Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCMI__Hide_Daily_Assistant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide Daily Assistant from Timecard</description>
        <inlineHelpText>Selecting this check-box will hide the daily assistant tab from the timecard</inlineHelpText>
        <label>Hide the daily assistant tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCMI__Hide_Project_Assistant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide Project Assistant from Timecard</description>
        <inlineHelpText>Selecting this check-box will hide the project assistant tab from the timecard</inlineHelpText>
        <label>Hide the project assistant tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCMI__Hide_Weekly_Assistant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide Weekly Assistant from Timecard</description>
        <inlineHelpText>Selecting this check-box will hide the weekly assistant tab from the timecard</inlineHelpText>
        <label>Hide the weekly assistant tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCMI__Show_Approvals__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should the &quot;Submit for Approval&quot; button be included on the timecard</description>
        <label>Show Submit For Approval</label>
        <type>Checkbox</type>
    </fields>
    <label>Configuration Options</label>
</CustomObject>